# auto-build-minecraft

./: .gitignore  README.md  playbook.yml  pyproject.toml
.github/workflows/: prerelease.yml  release.yml  versioning_prerelease.yml  versioning_release.yml
Docker/: Dockerfile
auto_build_minecraft/: msab.py
auto_build_minecraft/tasks/: add-hosts.yml  create-instance.yml  delete-instance.yml  run-server.yml  stop-instance.yml
example/: .gitignore  msab.yml
example/resources/: eula.txt  server.properties
tasks/: add-hosts.yml  create-instance.yml  delete-instance.yml  docker-push.yml  run-server.yml  start-instance.yml  stop-instance.yml
