[tool.poetry]
name = "auto-build-minecraft"
version = "0.2.0"
description = ""
authors = ["nerianighthawk <neria.nighthawk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto_build_minecraft"}]

[tool.poetry.dependencies]
python = "^3.7"
ansible-runner = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
